name: Playground
version: 1.0
cabal-version: 1.11
build-type: Simple
license: AllRightsReserved
stability: experimental
x-ghc-framework-version: 7.10.3-6.29-1
x-last-ide-version: HfM1.4.0
Executable Playground
  main-is: Fractals.hs
  buildable: True
  build-depends:
      base -any,
      JuicyPixels -any,
      Rasterific -any
  other-modules:
      LineGraphics
      Example1
      Chapter2
